# Transformer-from-scratch

./: README.md  pyproject.toml  requirements.txt  train.ipynb
model/: transfomer.py
notebooks/: Untitled.ipynb
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/: attention.py  dataloader.py  decoder.py  embed.py  encoder.py  test.py  transformer.py  utils.py
tests/: __init__.py  conftest.py  test_attention.py  test_embedding.py  test_encoder_decoder.py  test_transformer.py
